--- a/.github/workflows/keep_alive.yml
+++ b/.github/workflows/keep_alive.yml
@@ -1,30 +1,15 @@
-name: Keep Streamlit App Alive
+name: Keep Streamlit App Alive (Ping Only)
 
 on:
   schedule:
-    - cron: '0 22,10 * * *'
+    - cron: '0 15,21,3,9 * * *'
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
-  auto-commit:
+  ping-app:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
-
-      - name: Update dummy file to trigger deploy
+      - name: Ping App URL
         run: |
-          # 日付をファイルに書き込んで変更を作る
-          date > last_restarted.txt
-          
-          # Gitのユーザー設定（Botとしてコミットする）
-          git config --global user.name "GitHub Action"
-          git config --global user.email "action@github.com"
-          
-          # コミットしてプッシュ
-          git add last_restarted.txt
-          git commit -m "Auto-restart: keep app alive"
-          git push
+          curl -I https://narouevalu-pgj8tq2tdlccjybdx88kvd.streamlit.app/ || true
+          echo "Ping sent to app!"
