--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-streamlit>=1.37.0
+streamlit>=1.35.0
 pandas>=2.2.3
 supabase>=1.2.0
 streamlit-aggrid
 pyarrow==18.0.0
 duckdb
+xlsxwriter==3.2.9
 
 # Last force reboot: Sun Jan  4 15:16:16 UTC 2026
 # Last force reboot: Sun Jan  4 15:29:02 UTC 2026
 # Last force reboot: Sun Jan  4 15:58:24 UTC 2026
-
-
